fix(css): remove 4px to take whitespace into consideration

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -266,7 +266,7 @@ header {
   form .btn {
     font-size: 18px;
     padding: 8px 16px;
-    margin-right: 24px !important;
+    margin-right: 20px !important;
   }
 
   dt {
